--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello World
-    git git
-    yes
+    <input type = "radio"></body> Das ist ein Button 
     
 </body>
 </html>
