--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <input type = "radio"></body> Das ist ein Button 
+    <input type = "radio" name = "tage" value="tag"> Montag </input>
+    
+
+</body> 
     
 </body>
 </html>
